--- a/Main/Views/TambahKasusPages/KorbanPage.xaml
+++ b/Main/Views/TambahKasusPages/KorbanPage.xaml
@@ -157,7 +157,7 @@
                     <DataGridTextColumn Width="100" Header="Agama" Binding="{Binding Agama}"/>
                     <DataGridTextColumn Width="150" Header="Pendidikan" Binding="{Binding Pendidikan}"/>
                     <DataGridTextColumn Width="100" Header="Suku" Binding="{Binding Suku}"/>
-                    <DataGridTextColumn Width="100" Header="Hubungan" Binding="{Binding HubunganDenganTerlapor}"/>
+                    <DataGridTextColumn Width="100" Header="Hubungan" Binding="{Binding HubunganText}"/>
                     <DataGridTemplateColumn Width="auto" Header=":">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
@@ -170,13 +170,14 @@
                                         <StackPanel>
                                             <Label Content="Hubungan Dengan Korban"/>
                                         </StackPanel>
-                                        <DataGrid Grid.Row="1" ItemsSource="{Binding Hubungan}" AutoGenerateColumns="False">
+                                        <DataGrid Grid.Row="1" ItemsSource="{Binding Hubungan}" 
+                                                  AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False">
                                             <DataGrid.Columns>
                                                 <DataGridTextColumn Header="Nama Korban" Binding="{Binding Korban.Nama}"/>
                                                 <DataGridTemplateColumn Header="Hubungan Dengan Terlapor" >
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate>
-                                                            <ComboBox SelectedItem="{Binding Nama}" ItemsSource="{Binding DataJenisHubungans}"/>
+                                                            <ComboBox SelectedItem="{Binding JenisHubungan}" ItemsSource="{Binding DataJenisHubungans}"/>
                                                         </DataTemplate>
                                                     </DataGridTemplateColumn.CellTemplate>
                                                 </DataGridTemplateColumn>
