--- a/Main/Views/TambahKasusPages/PengaduanPage.xaml
+++ b/Main/Views/TambahKasusPages/PengaduanPage.xaml
@@ -33,21 +33,13 @@
                 <Label Content="Waktu Lapor"></Label>
                 <WrapPanel>
                     <DatePicker SelectedDateFormat="Long" Language="id-ID" 
-                            SelectedDate="{Binding TanggalLapor,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}"
+                            SelectedDate="{Binding TanggalLapor,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}"
                             Width="250" Margin="0,0,5,0"  materialDesign:HintAssist.Hint="Pick Date"  Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
-                    <materialDesign:TimePicker Language="id-ID" Height="36" SelectedTime="{Binding WaktuLapor}"
+                    <materialDesign:TimePicker Language="id-ID" Height="36" SelectedTime="{Binding TanggalLapor, Mode=TwoWay}"
                                        materialDesign:HintAssist.Hint="Validates"
                                        IsInvalidTextAllowed="False"
                                        Is24Hours="{Binding IsChecked, ElementName=Is24HourCheckbox}"
                                        Width="100">
-                        <materialDesign:TimePicker.Text>
-                            <Binding Path="Hari" UpdateSourceTrigger="PropertyChanged">
-                                <Binding.ValidationRules>
-                               
-                                </Binding.ValidationRules>
-                            </Binding>
-                        </materialDesign:TimePicker.Text>
-
                     </materialDesign:TimePicker>
                 </WrapPanel>
             </WrapPanel>
