--- a/Main/Views/DataView.xaml
+++ b/Main/Views/DataView.xaml
@@ -52,7 +52,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="5"
+        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="5" Command="{Binding AddCommand}"
       Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
       ToolTip="MaterialDesignFloatingActionAccentButton">
             <materialDesign:PackIcon
