--- a/Main/Views/TambahKasusPages/DampakPage.xaml
+++ b/Main/Views/TambahKasusPages/DampakPage.xaml
@@ -25,7 +25,7 @@
                 <StackPanel Margin="10,0"  Background="White">
                     <WrapPanel>
                         <Label Content="Waktu Kajadian"></Label>
-                        <materialDesign:TimePicker Language="id-ID" SelectedTime="{Binding Waktu}" Height="37" Margin="5"
+                        <materialDesign:TimePicker Language="id-ID" SelectedTime="{Binding Waktu,Mode=TwoWay}" Height="37" Margin="5"
                                        materialDesign:HintAssist.Hint="Waktu"
                                        IsInvalidTextAllowed="True"
                                        Is24Hours="{Binding IsChecked, ElementName=Is24HourCheckbox}"
@@ -36,13 +36,13 @@
                                 </Binding>
                             </materialDesign:TimePicker.Text>
                         </materialDesign:TimePicker>
-                        <DatePicker MinWidth="200"  SelectedDateFormat="Long" Language="id-ID" SelectedDate="{Binding Tanggal,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
+                        <DatePicker MinWidth="200"  SelectedDateFormat="Long" Language="id-ID" SelectedDate="{Binding Tanggal,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
                             Width="100"  materialDesign:HintAssist.Hint="Tanggal"  Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
 
                     </WrapPanel>
                     <WrapPanel>
                         <Label Content="Tempat Kejadian"></Label>
-                        <TextBox Text="{Binding Tempat,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}"></TextBox>
+                        <ComboBox ItemsSource="{Binding DataTempat}" SelectedItem="{Binding Tempat,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}"></ComboBox>
                     </WrapPanel>
                   
                 </StackPanel>
